button for cadastrar new users

--- a/src/app/components/login-page/login-page.component.html
+++ b/src/app/components/login-page/login-page.component.html
@@ -18,9 +18,11 @@
     </mat-card-content>
 
     <mat-card-footer>
-      <mat-card-actions style="justify-content: center;">
-        <button mat-flat-button color="primary" type="submit">Login</button>
+      <mat-card-actions style="justify-content: center;" class="button-row">
+        <button mat-stroked-button color="primary" type="submit">Login</button>
+        <button mat-stroked-button routerLink="/register" type="button">Cadastrar</button>
       </mat-card-actions>
+
     </mat-card-footer>
 
   </form>
