fixed somed small issues

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -3,7 +3,7 @@
   <mat-drawer #drawer opened="true" mode="side" position="start" [opened]="false" >
     <mat-nav-list class="exemple-button-row custom-nav-list">
       <mat-list-item>
-        <button matButton="filled" routerLink="ngfor" mat-button> <mat-icon>home</mat-icon>Home</button>
+        <button matButton="filled" mat-button> <mat-icon>home</mat-icon>Home</button>
       </mat-list-item>
 
     </mat-nav-list>
