new user logged logic

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,13 +1,15 @@
 
 <mat-drawer-container autosize>
-  <mat-drawer #drawer opened="true" mode="side" position="start" [opened]="false" >
-    <mat-nav-list class="exemple-button-row custom-nav-list">
-      <mat-list-item>
-        <button matButton="filled" mat-button> <mat-icon>home</mat-icon>Home</button>
-      </mat-list-item>
-
-    </mat-nav-list>
-  </mat-drawer>
+  
+    <button (click)="logout()">Sair</button>
+    <mat-drawer #drawer opened="true" mode="side" position="start" [opened]="false" >
+      <mat-nav-list class="exemple-button-row custom-nav-list">
+        <mat-list-item>
+          <button matButton="filled" mat-button> <mat-icon>home</mat-icon>Home</button>
+        </mat-list-item>
+        
+      </mat-nav-list>
+    </mat-drawer>
   <mat-drawer-content>
     <div style="text-align: center;min-height: 600px;">
 
